# little-vulkan-engine

./: CMakeLists.txt  build.sh  compile-shaders.sh
shaders/: simple_shader.frag  simple_shader.vert
src/: main.cpp
src/app/: lve_app.cpp  lve_app.hpp
src/camera/: lve_camera.cpp  lve_camera.hpp
src/device/: lve_device.cpp  lve_device.hpp
src/game_object/: lve_game_object.hpp
src/models/: load_model.cpp  load_model.hpp  lve_model.cpp  lve_model.hpp
src/pipeline/: lve_pipeline.cpp  lve_pipeline.hpp
src/render_systems/: simple_render_system.cpp  simple_render_system.hpp
src/renderer/: lve_renderer.cpp  lve_renderer.hpp
src/swap_chain/: lve_swap_chain.cpp  lve_swap_chain.hpp
src/window/: lve_window.cpp  lve_window.hpp
